<resources>
    <string name="app_name">test-navigation</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- labels -->
    <string name="search_fragment_label">Search</string>
    <string name="barcode_fragment_label">Barcode</string>
    <string name="about_fragment_label">About</string>
    <string name="feedback_fragment_label">Feedback</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="user_profile_pager_fragment_label">User Profile</string>
    <string name="users_tab_fragment_label">Users Tab</string>
    <string name="user_collections_fragment_label">Collections</string>
    <string name="user_ratings_fragment_label">Ratings</string>
    <string name="user_tags_fragment_label">Tags</string>
    <string name="user_users_fragment_label">Users</string>
    <string name="menu_more">More</string>
    <string name="user_subscriptions_fragment_label">Subscriptions</string>
    <string name="user_subscribers_fragment_label">Subscribers</string>
    <string name="user_recommends_fragment_label">Recommends</string>
    <string name="artist_releases_fragment_label">Releases</string>
    <string name="artist_ratings_fragment_label">Ratings</string>
    <string name="artist_tags_fragment_label">Tags</string>

    <!-- menu items -->
    <string name="drawer_item_main">Main</string>
    <string name="drawer_item_user">User</string>
    <string name="drawer_item_artist">Artist</string>

    <string name="user_profile_tab_profile">Profile</string>
    <string name="user_profile_tab_users">Users</string>

</resources>
