<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/drawer_item_main">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/searchFragment"
                    android:icon="@drawable/ic_search_24"
                    android:orderInCategory="1"
                    android:title="@string/search_fragment_label"/>
                <item
                    android:id="@+id/barcodeFragment"
                    android:icon="@drawable/ic_barcode_scan_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="2"
                    android:title="@string/barcode_fragment_label"/>
                <item
                    android:id="@+id/aboutFragment"
                    android:icon="@drawable/ic_info_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="3"
                    android:title="@string/about_fragment_label"/>
                <item
                    android:id="@+id/feedbackFragment"
                    android:icon="@drawable/ic_email_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="4"
                    android:title="@string/feedback_fragment_label"/>
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_settings_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="5"
                    android:title="@string/settings_fragment_label"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/drawer_item_user">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/userProfilePagerFragment"
                    android:icon="@drawable/ic_person_24"
                    android:orderInCategory="6"
                    android:title="@string/user_profile_pager_fragment_label"/>
                <item
                    android:id="@+id/usersTabFragment"
                    android:icon="@drawable/ic_users_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="7"
                    android:title="@string/users_tab_fragment_label"/>
                <item
                    android:id="@+id/userCollectionsFragment"
                    android:icon="@drawable/ic_collections_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="8"
                    android:title="@string/user_collections_fragment_label"/>
                <item
                    android:id="@+id/userRatingsFragment"
                    android:icon="@drawable/ic_star_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="9"
                    android:title="@string/user_ratings_fragment_label"/>
                <item
                    android:id="@+id/userTagsFragment"
                    android:icon="@drawable/ic_tag_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="10"
                    android:title="@string/user_tags_fragment_label"/>
                <item
                    android:id="@+id/userUsersFragment"
                    android:icon="@drawable/ic_users_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="11"
                    android:title="@string/user_users_fragment_label"/>
                <item
                    android:id="@+id/userSubscriptionsFragment"
                    android:icon="@drawable/ic_collection_edit_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="12"
                    android:title="@string/user_subscriptions_fragment_label"/>
                <item
                    android:id="@+id/userSubscribersFragment"
                    android:icon="@drawable/ic_collection_add_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="13"
                    android:title="@string/user_subscribers_fragment_label"/>
                <item
                    android:id="@+id/userRecommendsFragment"
                    android:icon="@drawable/ic_thumb_up_24"
                    android:menuCategory="secondary"
                    android:orderInCategory="14"
                    android:title="@string/user_recommends_fragment_label"/>
            </group>
        </menu>
    </item>
</menu>
