<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/searchFragment">

    <!-- Main menu-->
    <fragment
        android:id="@+id/searchFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/action_searchFragment_to_artistReleasesFragment"
            app:destination="@id/artistReleasesFragment"/>
        <action
            android:id="@+id/action_searchFragment_to_barcodeFragment"
            app:destination="@id/barcodeFragment"/>
    </fragment>
    <fragment
        android:id="@+id/barcodeFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.BarcodeFragment"
        android:label="@string/barcode_fragment_label"
        tools:layout="@layout/barcode_fragment">
        <action
            android:id="@+id/action_barcodeFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"/>
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.AboutFragment"
        android:label="@string/about_fragment_label"
        tools:layout="@layout/about_fragment">
        <action
            android:id="@+id/action_aboutFragment_to_feedbackFragment"
            app:destination="@id/feedbackFragment"/>
    </fragment>
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.FeedbackFragment"
        android:label="@string/feedback_fragment_label"
        tools:layout="@layout/feedback_fragment">
        <action
            android:id="@+id/action_feedbackFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/settings_fragment"/>

    <!-- User menu -->
    <fragment
        android:id="@+id/userProfilePagerFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.UserProfilePagerFragment"
        android:label="@string/user_profile_pager_fragment_label"
        tools:layout="@layout/fragment_pager_without_icons">
        <action
            android:id="@+id/action_userProfilePagerFragment_to_artistReleasesFragment"
            app:destination="@id/artistReleasesFragment"/>
        <action
            android:id="@+id/action_userProfilePagerFragment_to_searchFragment"
            app:destination="@id/searchFragment"/>
    </fragment>
    <fragment
        android:id="@+id/userCollectionsFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.UserCollectionsFragment"
        android:label="@string/user_collections_fragment_label"
        tools:layout="@layout/user_collections_fragment">
        <action
            android:id="@+id/action_userCollectionsFragment_to_userProfilePagerFragment"
            app:destination="@id/userProfilePagerFragment"/>
    </fragment>
    <fragment
        android:id="@+id/userRatingsFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.UserRatingsFragment"
        android:label="@string/user_ratings_fragment_label"
        tools:layout="@layout/user_ratings_fragment">
        <action
            android:id="@+id/action_userRatingsFragment_to_userProfilePagerFragment"
            app:destination="@id/userProfilePagerFragment"/>
    </fragment>
    <fragment
        android:id="@+id/userTagsFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.UserTagsFragment"
        android:label="@string/user_tags_fragment_label"
        tools:layout="@layout/user_tags_fragment">
    </fragment>
    <fragment
        android:id="@+id/userSubscriptionsFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.UserSubscriptionsFragment"
        android:label="@string/user_subscriptions_fragment_label"
        tools:layout="@layout/user_subscriptions_fragment">
    </fragment>
    <fragment
        android:id="@+id/userSubscribersFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.UserSubscribersFragment"
        android:label="@string/user_subscribers_fragment_label"
        tools:layout="@layout/user_subscribers_fragment">
    </fragment>
    <fragment
        android:id="@+id/userRecommendsFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.UserRecommendsFragment"
        android:label="@string/user_recommends_fragment_label"
        tools:layout="@layout/user_recommends_fragment">
    </fragment>
    <fragment
        android:id="@+id/userUsersFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.UserUsersFragment"
        android:label="@string/user_users_fragment_label"
        tools:layout="@layout/user_users_fragment">
    </fragment>

    <!-- Artist menu -->
    <fragment
        android:id="@+id/artistReleasesFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.ArtistReleasesFragment"
        android:label="@string/artist_releases_fragment_label"
        tools:layout="@layout/artist_releases_fragment">
        <action
            android:id="@+id/action_artistReleasesFragment_to_userProfilePagerFragment"
            app:destination="@id/userProfilePagerFragment"/>
    </fragment>
    <fragment
        android:id="@+id/artistRatingsFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.ArtistRatingsFragment"
        android:label="@string/artist_ratings_fragment_label"
        tools:layout="@layout/artist_ratings_fragment">
        <action
            android:id="@+id/action_artistRatingsFragment_to_artistReleasesFragment"
            app:destination="@id/artistReleasesFragment"/>
    </fragment>
    <fragment
        android:id="@+id/artistTagsFragment"
        android:name="app.mobilebrainz.testnavigation.fragments.ArtistTagsFragment"
        android:label="@string/artist_tags_fragment_label"
        tools:layout="@layout/artist_tags_fragment">
        <action
            android:id="@+id/action_artistTagsFragment_to_artistReleasesFragment"
            app:destination="@id/artistReleasesFragment"/>
    </fragment>

</navigation>