<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/userProfilePagerFragment"
        android:icon="@drawable/ic_person_24"
        android:title="@string/user_profile_pager_fragment_label"/>
    <item
        android:id="@+id/userCollectionsFragment"
        android:icon="@drawable/ic_collections_24"
        android:menuCategory="secondary"
        android:title="@string/user_collections_fragment_label"/>
    <item
        android:id="@+id/userRatingsFragment"
        android:icon="@drawable/ic_star_24"
        android:menuCategory="secondary"
        android:title="@string/user_ratings_fragment_label"/>
    <item
        android:id="@+id/userTagsFragment"
        android:icon="@drawable/ic_tag_24"
        android:menuCategory="secondary"
        android:title="@string/user_tags_fragment_label"/>

    <!-- Без навигациии в начальный фрагмент вторичного меню, просто как прокрутка меню -->

    <item
        android:id="@+id/userSecondaryMenu"
        android:icon="@drawable/ic_more_horiz_24"
        android:menuCategory="secondary"
        android:title="@string/menu_more"/>

    <!-- С навигацией в начальный фрагмент вторичного меню -->
    <!--
    <item
        android:id="@+id/userUsersFragment"
        android:icon="@drawable/ic_more_horiz_24"
        android:menuCategory="secondary"
        android:title="@string/user_users_fragment_label"/>
    -->

    </menu>